Fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@
 /* Base elements */
 * {box-sizing: border-box; transition: 0.5s;}
 body {font: normal 15px 'Montserrat', sans-serif; background: var(--body-color); margin: 0; color: #eee; line-height: 1.8;}
-main {margin-top: 100px;}
+main {margin-top: 80px;}
 nav {background: var(--header-color);}
 footer {width: 100%; padding: 15px; margin-top: 15px; background: var(--header-color); border-top: solid #fff; text-align: center;}
 p {text-align: center;}
